--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+@import url('./common/styles/fonts/fonts.css');
+@import url('./common/styles/variable.css');
+@import url('./common/styles/CommonClass.css');
+@import url('./common/styles/animations.css');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Gilroy , sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  background-color: var(--bg-black);
+  color:var(--white);
 }
 
 code {
