--- a/src/components/HeroSection/heroSection.css
+++ b/src/components/HeroSection/heroSection.css
@@ -25,7 +25,7 @@
    position: absolute;
    height: 72px;
    font-size: 25px;
-   line-height: 68px; /* 30px */
+   line-height: 68px;
    font-weight: 600;
 }
 
