--- a/src/components/BrandsLove/Brandslove.css
+++ b/src/components/BrandsLove/Brandslove.css
@@ -1,14 +1,16 @@
-.brands-love{
+.brands-love {
     background-color: var(--white);
     color: var(--bg-black);
     padding: 60px 0px;
 }
-.brands-love-heading{
+
+.brands-love-heading {
     font-size: 24px;
     font-weight: 700;
 }
-.brands-love-banner{
-    background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/brands-desktop.png);
+
+.brands-love-banner {
+    background-image: url('https://web-images.credcdn.in/_next/assets/images/home-page/brands-desktop.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100%;
@@ -17,16 +19,16 @@
     margin-top: 50px;
 }
 
-@media all and (max-width: 767px){
-    .brands-love-heading{
+@media all and (max-width: 767px) {
+    .brands-love-heading {
         font-size: 18px;
     }
-    .brands-love-banner{
-        background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/brands-mobile.png);
+    
+    .brands-love-banner {
+        background-image: url('https://web-images.credcdn.in/_next/assets/images/home-page/brands-mobile.png');
         background-size: contain;
         height: 240px;
         margin-top: 35px;
         background-position: left center;
     }
-    
 }
