--- a/src/components/CredStory/credStory.css
+++ b/src/components/CredStory/credStory.css
@@ -4,27 +4,31 @@
   background-size: cover;
   background-position: right bottom;
   position: relative;
-  background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/trust-bg.jpg);
+  background-image: url('https://web-images.credcdn.in/_next/assets/images/home-page/trust-bg.jpg');
 }
 
 .story-wrapper {
   align-self: flex-end;
 }
+
 .cred-story-heading-wrapper {
   width: 50%;
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .cred-story-heading {
   font-size: 60px;
   line-height: 60px;
   font-weight: 700;
   max-height: 80%;
 }
+
 .cred-story-details {
   width: 50%;
   font-weight: 500;
 }
+
 .cred-story-para {
   font-size: 18px;
   line-height: 28px;
@@ -34,30 +38,35 @@
 
 @media all and (max-width: 1279px) {
   .cred-story-heading {
-    max-width: 100%;
+      max-width: 100%;
   }
 }
 
 @media all and (max-width: 767px) {
   .cred-story {
-    background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/trust-bg-mobile.jpg);
+      background-image: url('https://web-images.credcdn.in/_next/assets/images/home-page/trust-bg-mobile.jpg');
   }
-  .cred-story-heading{
-    font-size: 55px;
-    line-height: 55px;
-    padding-bottom: 80px;
+  
+  .cred-story-heading {
+      font-size: 55px;
+      line-height: 55px;
+      padding-bottom: 80px;
   }
-  .cred-story-para{
-    font-size: 15px;
+  
+  .cred-story-para {
+      font-size: 15px;
   }
-  .story-wrapper{
-    flex-direction: column;
-    padding: 70px 0px;
+  
+  .story-wrapper {
+      flex-direction: column;
+      padding: 70px 0;
   }
-  .cred-story-heading-wrapper{
-    width: 100%;
+  
+  .cred-story-heading-wrapper {
+      width: 100%;
   }
-  .cred-story-details{
-    width: 100%;
+  
+  .cred-story-details {
+      width: 100%;
   }
 }
