--- a/src/components/FeelSpecial/FeelSpecial.css
+++ b/src/components/FeelSpecial/FeelSpecial.css
@@ -1,20 +1,18 @@
-.feel-special{
+.feel-special {
     background-color: var(--bg-red);
-    background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/deserve-more-bg.jpg);
-
+    background-image: url('https://web-images.credcdn.in/_next/assets/images/home-page/deserve-more-bg.jpg');
 }
 
 @media all and (max-width: 1279px) {
-    .feel-special{
+    .feel-special {
         background-position: center bottom;
     }
 }
 
 @media all and (max-width: 767px) {
-    .feel-special{
-        background-image: url(https://web-images.credcdn.in/_next/assets/images/home-page/deserve-more-bg-mobile.jpg);
+    .feel-special {
+        background-image: url('https://web-images.credcdn.in/_next/assets/images/home-page/deserve-more-bg-mobile.jpg');
         min-height: 1150px;
         background-position: right center;
     }
 }
-
