--- a/src/components/HeroSection/heroSection.css
+++ b/src/components/HeroSection/heroSection.css
@@ -1,80 +1,79 @@
-.hero-section-wrapper{
+.hero-section-wrapper {
     position: relative;
 }
 
-.hero-section{
-   min-height: 100vh;
-   text-align: center; 
+.hero-section {
+    min-height: 100vh;
+    text-align: center; 
 }
 
-.hero-heading{
-  font-size: 106px;  
-  font-weight: 700;
+.hero-heading {
+    font-size: 106px;  
+    font-weight: 700;
 }
 
-.hero-subheading{
-   font-size: 30px;
-   font-weight: 700;
-   margin: 35px 58px;
-   line-height: 38px;
+.hero-subheading {
+    font-size: 30px;
+    font-weight: 700;
+    margin: 35px 58px;
+    line-height: 38px;
 }
 
-.hero-claim-label{
-   background-color: var(--bg-gray); 
-   width: 100%;
-   position: absolute;
-   height: 72px;
-   font-size: 25px;
-   line-height: 68px;
-   font-weight: 600;
+.hero-claim-label {
+    background-color: var(--bg-gray); 
+    width: 100%;
+    position: absolute;
+    height: 72px;
+    font-size: 25px;
+    line-height: 68px;
+    font-weight: 600;
 }
 
-.claim-arrow{
+.claim-arrow {
     height: 11px;
-    margin: 7px 0px 0px 8px;
+    margin: 7px 0 0 8px;
 }
 
-.claim-anchor{
+.claim-anchor {
     color: var(--link-blue);
     margin-left: 17px;
 }
 
-
-@media all and (max-width: 1279px){
-    .hero-heading{
+@media all and (max-width: 1279px) {
+    .hero-heading {
         font-size: 82px;
         line-height: 92px;
     }
-    .hero-subheading{
+    .hero-subheading {
         font-size: 25px;
     }
-    .claim-anchor{
-        margin-left: 0px;
+    .claim-anchor {
+        margin-left: 0;
     }
 }
 
-@media all and (max-width: 767px){
-    .hero-section{
+@media all and (max-width: 767px) {
+    .hero-section {
         align-items: flex-start;
         text-align: left;
         min-height: 70vh;
     }
-    .hero-heading{
+    .hero-heading {
         font-size: 55px;
         line-height: 47.5px;
         width: 270px;
         margin-top: 60px;
     }
-    .hero-subheading{
+    .hero-subheading {
         font-size: 16px;
         line-height: 22px;
-        margin: 35px 0px;
+        margin: 35px 0;
     }
-    .claim-arrow{
+    .claim-arrow {
         height: 6px;
-        margin: 2px 0px 0px 3px;
+        margin: 2px 0 0 3px;
     }
-    .hero-claim-label{
+    .hero-claim-label {
         height: 55px;
         font-size: 13px;
     }
